# BACKEND

./: .gitignore  Dockerfile  README.md  azure-pipeline.yml  bitspilani-452705-b4b20804de3a.json  geminiApiKey.json  llm.py  logger.py  main.py  package-lock.json  pyproject.toml  render.yaml  resume-screener-441307-231743993187 (1).json
Auth/: auth.py  email_utils.py  routes.py  verification_utils.py
customer_proposal/: config.py  database.py  model.py  routes.py  schemas.py  services.py
customer_proposal/services/: proposals.py
erp/: erp_client.py  routes.py
pinecone_db/: upload_to_database.ipynb
pinecone_db/.ipynb_checkpoints/: upload_to_database-checkpoint.ipynb
product_manual/: prompt.py  routes.py  schema.py  services.py
sunshine/: routes.py
triaging/: data_table.py  helper.py  prompt.py  routes.py  schemas.py  services.py
