[tool.poetry]
name = "f1-backend"
version = "0.1.0"
description = ""
authors = ["JoshMusira <joshuamusira01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.14"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-dotenv = "^1.1.0"
langchain-community = "^0.3.20"
langchain = "^0.3.21"
langchain-openai = "^0.3.11"
uuid = "^1.30"
langdetect = "^1.0.9"
pinecone = {extras = ["grpc"], version = "^6.0.2"}
langchain-google-genai = "^2.1.2"
pypdf = "^5.4.0"
langchain-pinecone = "^0.2.4"
#google-auth = "^2.38.0"
#python-jose = "^3.4.0"
#passlib = "^1.7.4"
#bcrypt = "^4.3.0"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
